[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Entities/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Entities/CharacterController.gd" type="Script" id=2]
[ext_resource path="res://ElectricArc.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.6

[sub_resource type="CapsuleShape" id=2]
radius = 0.6

[sub_resource type="SphereMesh" id=3]

[node name="Player" type="KinematicBody"]
script = ExtResource( 2 )
ElectricArcScene = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 2 )

[node name="HeadPivot" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.61652, 0 )

[node name="Camera" type="Camera" parent="HeadPivot"]
current = true

[node name="RayCast" type="RayCast" parent="HeadPivot"]
enabled = true
cast_to = Vector3( 0, 0, -50 )
collision_mask = 2

[node name="LeftHand" type="Position3D" parent="HeadPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.936, -0.564, -1.163 )

[node name="MeshInstance" type="MeshInstance" parent="HeadPivot/LeftHand"]
transform = Transform( 0.208092, 0, 0, 0, 0.185971, 0, 0, 0, 0.160295, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="RightHand" type="Position3D" parent="HeadPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.936, -0.564, -1.163 )

[node name="MeshInstance" type="MeshInstance" parent="HeadPivot/RightHand"]
transform = Transform( 0.208092, 0, 0, 0, 0.185971, 0, 0, 0, 0.160295, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="PlayerController" type="Node" parent="."]
script = ExtResource( 1 )
